# itsec-fuzz

./: .gitignore  Vergleich_Verteilung
Ccode/CMake/: TODO  config.gateway  downCANX  getSPICANX  setPin0  setupPin0Output  sftp.pi  ssh.pi  testBatch  upCANX
Ccode/CMake/build-gatewayFuzzer-Desktop-Vorgabe/: CMakeCache.txt  Makefile  cmake_install.cmake  gatewayFuzzer.bin.cbp  gatewayFuzzer.cbp
Ccode/CMake/canSend/: CMakeLists.txt
Ccode/CMake/canSend/src/: main.cpp
Ccode/CMake/gatewayFuzzer/: CMakeLists.txt  CMakeLists.txt.user.10f048e  gatewayFuzzer
Ccode/CMake/gatewayFuzzer/src/: Logger.cpp  Logger.h  canSocket.cpp  canSocket.h  filehandler.cpp  filehandler.h  filereader.cpp  filereader.hpp  filter.cpp  filter.h  main.cpp  testcaseCyclic.cpp  testcaseCyclic.h  testcaseThd.cpp  testcaseThd.h  testcases.cpp  testcases.h  testcasesSven.cpp  testcasesSven.h  testcasesTh.cpp  testcasesTh.h  util.cpp  util.h
Ccode/CMake/logfiles/: interface0.log.cycle  interface1.log.cycle  interface2.log.cycle
Ccode/basis/: README.txt  vcan_conf.sh  vcan_conf3x3.sh
Ccode/basis/canRecievce/: Makefile  main.c
Ccode/basis/canSend/: Makefile  main.c  sendCan
Ccode/logs/filterreport/: interface0.log.cycle  interface2.log.cycle
Daten/: findCycleReportOnly.txt  findCycles.txt
